@@ -61,6 +61,7 @@
 #define IDC_PRIORITY                    1042
 #define IDC_AFFINITY_ALL                1043
 #define IDC_AFFINITY                    1044
+#define IDC_CONSOLE                     1045
 
 // Next default values for new objects
 // 
@@ -68,7 +69,7 @@
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_NEXT_RESOURCE_VALUE        115
 #define _APS_NEXT_COMMAND_VALUE         40001
-#define _APS_NEXT_CONTROL_VALUE         1045
+#define _APS_NEXT_CONTROL_VALUE         1046
 #define _APS_NEXT_SYMED_VALUE           101
 #endif
 #endif
