@@ -1697,6 +1697,8 @@ void CALLBACK end_service(void *arg, unsigned char why) {
   if (service->pid) kill_process_tree(service, service->pid, exitcode, service->pid);
   service->pid = 0;
 
+  if (! service->no_console) FreeConsole();
+
   /*
     The why argument is true if our wait timed out or false otherwise.
     Our wait is infinite so why will never be true when called by the system.
